--- a/sp.html
+++ b/sp.html
@@ -37,6 +37,10 @@
       margin-left: 4px;
     }
 
+    .logo-animated {
+      animation: bounceIn 1s ease forwards;
+    }
+
     .menu-icon {
       font-size: 1.8rem;
       cursor: pointer;
@@ -97,6 +101,7 @@
     section {
       padding: 32px 20px;
       border-bottom: 1px solid #eee;
+      animation: fadeInUp 0.8s ease-out;
     }
 
     h3 {
@@ -153,10 +158,6 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    .logo-animated {
-      animation: bounceIn 1s ease forwards;
-    }
-
     @keyframes bounceIn {
       0% { transform: scale(0.8); opacity: 0; }
       60% { transform: scale(1.05); opacity: 1; }
@@ -201,7 +202,7 @@
   <div class="feature-box">📱 スマホで見やすいサイトを作りたい方</div>
   <div class="feature-box">💬 SNSに貼れるURLが欲しい方</div>
   <div class="feature-box">💰 コストを抑えて始めたい方</div>
-  <div class="feature-box">🧾 毎月かかるような費用（サーバー・ドメイン）もこのサービスでは不要！</div>
+  <div class="feature-box">🧾 サーバーやドメインの費用も不要です！</div>
 </section>
 
 <section id="plans">
@@ -212,7 +213,7 @@
 </section>
 
 <section>
-  <h3 id="options">オプション料金（必要な方のみ）</h3>
+  <h3>オプション料金（必要な方のみ）</h3>
   <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
   <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
   <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
@@ -222,12 +223,9 @@
 <section>
   <h3>よくある質問</h3>
   <div class="faq">
-    <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>
-    → いいえ、<strong>サーバー契約不要の公開方式</strong>なので維持費ゼロです！</p>
-    <p><strong>Q.</strong> ドメインは必要？<br>
-    → 無料URLで十分ですが、独自ドメイン取得も相談OK！</p>
-    <p><strong>Q.</strong> 相談はどこから？<br>
-    → このLINEから気軽にどうぞ！</p>
+    <p><strong>Q.</strong> サーバー契約しないとダメ？<br>→ いいえ、不要です！</p>
+    <p><strong>Q.</strong> ドメインは？<br>→ 無料URLで運用できます！</p>
+    <p><strong>Q.</strong> 相談はどこから？<br>→ LINEからお気軽に！</p>
   </div>
 </section>
 
