--- a/sp.html
+++ b/sp.html
@@ -37,6 +37,17 @@
       margin-left: 4px;
     }
 
+    .logo-animated {
+      animation: bounceIn 1s ease forwards;
+      animation-delay: 0.2s;
+    }
+
+    @keyframes bounceIn {
+      0%   { transform: scale(0.8); opacity: 0; }
+      60%  { transform: scale(1.05); opacity: 1; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
     .menu-icon {
       font-size: 1.8rem;
       cursor: pointer;
@@ -65,7 +76,7 @@
 
     .hero {
       background: url('hero.png') center/cover no-repeat;
-      padding: 80px 16px;
+      padding: 50px 16px;
       color: #fff;
     }
 
@@ -94,10 +105,14 @@
       animation: fadeInUp 1s ease-out;
     }
 
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     section {
       padding: 32px 20px;
       border-bottom: 1px solid #eee;
-      animation: fadeInUp 0.8s ease-out;
     }
 
     h3 {
@@ -105,8 +120,6 @@
       border-left: 5px solid #64b5f6;
       padding-left: 12px;
       margin-bottom: 20px;
-      display: flex;
-      align-items: center;
     }
 
     .feature-box, .plan-card, .option-card {
@@ -142,11 +155,6 @@
 
     .line-btn img {
       height: 48px;
-      transition: transform 0.3s ease;
-    }
-
-    .line-btn img:hover {
-      transform: scale(1.08);
     }
 
     footer {
@@ -157,24 +165,36 @@
     }
 
     .icon-circle {
-      width: 40px;
-      height: 40px;
+      width: 96px;
+      height: 96px;
       border-radius: 50%;
       object-fit: cover;
       vertical-align: middle;
       margin-right: 12px;
     }
 
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
+    @media (max-width: 480px) {
+      .hero-text {
+        margin-left: 0;
+        padding-left: 8px;
+      }
+      .hero-text h2 {
+        font-size: 0.95rem;
+      }
+      .hero-text p {
+        font-size: 0.75rem;
+      }
+      .icon-circle {
+        width: 64px;
+        height: 64px;
+      }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1><span class="logo-main">まかせて</span><span class="logo-sub">Webライト</span></h1>
+  <h1><span class="logo-animated"><span class="logo-main">まかせて</span><span class="logo-sub">Webライト</span></span></h1>
   <div class="menu-icon" onclick="toggleMenu()">☰</div>
   <nav id="menu">
     <a href="#plans">価格プラン</a>
@@ -191,34 +211,37 @@
 </div>
 
 <section id="options">
-  <h3><img src="img/icon1.png" class="icon-circle">おすすめポイント</h3>
+  <h3><img src="img/icon1.png" class="icon-circle"> おすすめポイント</h3>
   <div class="feature-box">📱 スマホで見やすいサイトを作りたい方</div>
   <div class="feature-box">💬 SNSに貼れるURLが欲しい方</div>
   <div class="feature-box">💰 コストを抑えて始めたい方</div>
-  <div class="feature-box">🧾 サーバー・ドメイン不要で公開可能！</div>
+  <div class="feature-box">🧾 毎月かかるような費用（サーバー・ドメイン）もこのサービスでは不要！</div>
 </section>
 
 <section id="plans">
-  <h3><img src="img/icon2.png" class="icon-circle">プランと料金</h3>
+  <h3><img src="img/icon2.png" class="icon-circle"> プランと料金</h3>
   <div class="plan-card">📄 1ページ制作：5,000円</div>
   <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
   <div class="plan-card">📲 LINE相談 無制限無料</div>
 </section>
 
 <section>
-  <h3><img src="img/icon3.png" class="icon-circle">オプション料金</h3>
-  <div class="option-card">🏢 <a href="about.html">2ページ目の追加制作</a>：+1,500円</div>
-  <div class="option-card">🎞️ <a href="slider.html">スライダー導入</a>：+2,000円</div>
-  <div class="option-card">📨 <a href="form.html">問い合わせフォーム設置</a>：+2,000円</div>
-  <div class="option-card">🗺️ <a href="map.html">Googleマップ埋め込み</a>：+1,000円</div>
+  <h3><img src="img/icon3.png" class="icon-circle"> オプション料金（必要な方のみ）</h3>
+  <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
+  <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
+  <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
+  <div class="option-card">🗺️ <a href="map.html" target="_blank">Googleマップ埋め込み</a>：+1,000円</div>
 </section>
 
 <section>
-  <h3><img src="img/icon4.png" class="icon-circle">よくある質問</h3>
+  <h3><img src="img/icon4.png" class="icon-circle"> よくある質問</h3>
   <div class="faq">
-    <p><strong>Q.</strong> サーバー契約は必要？<br>→ いいえ、不要です。</p>
-    <p><strong>Q.</strong> 独自ドメインは？<br>→ 無料URLでもOK、相談可。</p>
-    <p><strong>Q.</strong> LINE相談はどこから？<br>→ 下記のボタンからどうぞ！</p>
+    <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>
+    → いいえ、<strong>サーバー契約不要の公開方式</strong>なので維持費ゼロです！</p>
+    <p><strong>Q.</strong> ドメインは必要？<br>
+    → 無料URLで十分ですが、独自ドメイン取得も相談OK！</p>
+    <p><strong>Q.</strong> 相談はどこから？<br>
+    → このLINEから気軽にどうぞ！</p>
   </div>
 </section>
 
@@ -235,7 +258,7 @@
 <script>
   function toggleMenu() {
     const menu = document.getElementById("menu");
-    menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
   }
 </script>
 
