--- a/sp.html
+++ b/sp.html
@@ -37,17 +37,6 @@
       margin-left: 4px;
     }
 
-    .logo-animated {
-      animation: bounceIn 1s ease forwards;
-      animation-delay: 0.2s;
-    }
-
-    @keyframes bounceIn {
-      0%   { transform: scale(0.8); opacity: 0; }
-      60%  { transform: scale(1.05); opacity: 1; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
     .menu-icon {
       font-size: 1.8rem;
       cursor: pointer;
@@ -105,11 +94,6 @@
       animation: fadeInUp 1s ease-out;
     }
 
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
     section {
       padding: 32px 20px;
       border-bottom: 1px solid #eee;
@@ -120,6 +104,7 @@
       border-left: 5px solid #64b5f6;
       padding-left: 12px;
       margin-bottom: 20px;
+      animation: fadeInUp 0.8s ease-out;
     }
 
     .feature-box, .plan-card, .option-card {
@@ -130,9 +115,7 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .feature-box:hover,
-    .plan-card:hover,
-    .option-card:hover {
+    .feature-box:hover, .plan-card:hover, .option-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
     }
@@ -164,9 +147,24 @@
       font-size: 0.85rem;
     }
 
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes bounceIn {
+      0% { transform: scale(0.8); opacity: 0; }
+      60% { transform: scale(1.05); opacity: 1; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    .logo-animated {
+      animation: bounceIn 1s ease forwards;
+    }
+
     .icon-circle {
-      width: 96px;
-      height: 96px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       object-fit: cover;
       vertical-align: middle;
@@ -185,8 +183,8 @@
         font-size: 0.75rem;
       }
       .icon-circle {
-        width: 64px;
-        height: 64px;
+        width: 48px;
+        height: 48px;
       }
     }
   </style>
@@ -210,7 +208,7 @@
   </div>
 </div>
 
-<section id="options">
+<section id="options" class="animated">
   <h3><img src="img/icon1.png" class="icon-circle"> おすすめポイント</h3>
   <div class="feature-box">📱 スマホで見やすいサイトを作りたい方</div>
   <div class="feature-box">💬 SNSに貼れるURLが欲しい方</div>
@@ -218,22 +216,22 @@
   <div class="feature-box">🧾 毎月かかるような費用（サーバー・ドメイン）もこのサービスでは不要！</div>
 </section>
 
-<section id="plans">
+<section id="plans" class="animated">
   <h3><img src="img/icon2.png" class="icon-circle"> プランと料金</h3>
   <div class="plan-card">📄 1ページ制作：5,000円</div>
   <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
   <div class="plan-card">📲 LINE相談 無制限無料</div>
 </section>
 
-<section>
-  <h3><img src="img/icon3.png" class="icon-circle"> オプション料金（必要な方のみ）</h3>
+<section class="animated">
+  <h3><img src="img/icon3.png" class="icon-circle"> オプション料金<br>（必要な方のみ）</h3>
   <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
   <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
   <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
   <div class="option-card">🗺️ <a href="map.html" target="_blank">Googleマップ埋め込み</a>：+1,000円</div>
 </section>
 
-<section>
+<section class="animated">
   <h3><img src="img/icon4.png" class="icon-circle"> よくある質問</h3>
   <div class="faq">
     <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>
@@ -256,10 +254,10 @@
 </footer>
 
 <script>
-  function toggleMenu() {
-    const menu = document.getElementById("menu");
-    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
-  }
+function toggleMenu() {
+  const menu = document.getElementById("menu");
+  menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+}
 </script>
 
 </body>
