--- a/sp.html
+++ b/sp.html
@@ -24,6 +24,7 @@
     header h1 {
       font-size: 1.5rem;
       margin: 0;
+      animation: bounceIn 1s ease forwards;
     }
 
     .logo-main {
@@ -104,7 +105,6 @@
       border-left: 5px solid #64b5f6;
       padding-left: 12px;
       margin-bottom: 20px;
-      animation: fadeInUp 0.8s ease-out;
     }
 
     .feature-box, .plan-card, .option-card {
@@ -115,7 +115,9 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .feature-box:hover, .plan-card:hover, .option-card:hover {
+    .feature-box:hover,
+    .plan-card:hover,
+    .option-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
     }
@@ -147,6 +149,15 @@
       font-size: 0.85rem;
     }
 
+    .icon-circle {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      vertical-align: middle;
+      margin-bottom: 6px;
+    }
+
     @keyframes fadeInUp {
       from { opacity: 0; transform: translateY(30px); }
       to { opacity: 1; transform: translateY(0); }
@@ -158,17 +169,8 @@
       100% { transform: scale(1); opacity: 1; }
     }
 
-    .logo-animated {
-      animation: bounceIn 1s ease forwards;
-    }
-
-    .icon-circle {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      object-fit: cover;
-      vertical-align: middle;
-      margin-right: 12px;
+    .animated {
+      animation: fadeInUp 0.8s ease-out;
     }
 
     @media (max-width: 480px) {
@@ -182,17 +184,13 @@
       .hero-text p {
         font-size: 0.75rem;
       }
-      .icon-circle {
-        width: 48px;
-        height: 48px;
-      }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1><span class="logo-animated"><span class="logo-main">まかせて</span><span class="logo-sub">Webライト</span></span></h1>
+  <h1><span class="logo-main">まかせて</span><span class="logo-sub">Webライト</span></h1>
   <div class="menu-icon" onclick="toggleMenu()">☰</div>
   <nav id="menu">
     <a href="#plans">価格プラン</a>
@@ -202,37 +200,33 @@
 </header>
 
 <div class="hero">
-  <div class="hero-text">
+  <div class="hero-text animated">
     <h2>低価格でホームページを作成</h2>
     <p>サーバー契約不要ですぐ始められます！</p>
   </div>
 </div>
 
 <section id="options" class="animated">
-  <h3><img src="img/icon1.png" class="icon-circle"> おすすめポイント</h3>
-  <div class="feature-box">📱 スマホで見やすいサイトを作りたい方</div>
-  <div class="feature-box">💬 SNSに貼れるURLが欲しい方</div>
-  <div class="feature-box">💰 コストを抑えて始めたい方</div>
-  <div class="feature-box">🧾 毎月かかるような費用（サーバー・ドメイン）もこのサービスでは不要！</div>
-</section>
-
-<section id="plans" class="animated">
-  <h3><img src="img/icon2.png" class="icon-circle"> プランと料金</h3>
-  <div class="plan-card">📄 1ページ制作：5,000円</div>
-  <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
-  <div class="plan-card">📲 LINE相談 無制限無料</div>
-</section>
-
-<section class="animated">
-  <h3><img src="img/icon3.png" class="icon-circle"> オプション料金<br>（必要な方のみ）</h3>
+  <h3 style="text-align:center; margin-bottom: 16px; line-height: 1.2;">
+    <img src="img/icon3.png" class="icon-circle"><br>
+    オプション料金<br>
+    <span style="font-size: 0.95rem; display: block; margin-top: 2px;">（必要な方のみ）</span>
+  </h3>
   <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
   <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
   <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
   <div class="option-card">🗺️ <a href="map.html" target="_blank">Googleマップ埋め込み</a>：+1,000円</div>
 </section>
 
+<section id="plans" class="animated">
+  <h3>💰 プランと料金</h3>
+  <div class="plan-card">📄 1ページ制作：5,000円</div>
+  <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
+  <div class="plan-card">📲 LINE相談 無制限無料</div>
+</section>
+
 <section class="animated">
-  <h3><img src="img/icon4.png" class="icon-circle"> よくある質問</h3>
+  <h3>🙋 よくある質問</h3>
   <div class="faq">
     <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>
     → いいえ、<strong>サーバー契約不要の公開方式</strong>なので維持費ゼロです！</p>
@@ -254,10 +248,10 @@
 </footer>
 
 <script>
-function toggleMenu() {
-  const menu = document.getElementById("menu");
-  menu.style.display = menu.style.display === "flex" ? "none" : "flex";
-}
+  function toggleMenu() {
+    const menu = document.getElementById("menu");
+    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+  }
 </script>
 
 </body>
