--- a/sp.html
+++ b/sp.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>まかせてWebライト</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'M PLUS Rounded 1c', sans-serif;
@@ -22,7 +22,7 @@
     }
 
     header h1 {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
       margin: 0;
       animation: bounceIn 1s ease forwards;
     }
@@ -104,7 +104,7 @@
       font-size: 1.2rem;
       border-left: 5px solid #64b5f6;
       padding-left: 12px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .feature-box, .plan-card, .option-card {
@@ -115,9 +115,7 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .feature-box:hover,
-    .plan-card:hover,
-    .option-card:hover {
+    .feature-box:hover, .plan-card:hover, .option-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
     }
@@ -155,7 +153,11 @@
       border-radius: 50%;
       object-fit: cover;
       vertical-align: middle;
-      margin-bottom: 6px;
+      margin-right: 16px;
+    }
+
+    .animated {
+      animation: fadeInUp 0.8s ease-out;
     }
 
     @keyframes fadeInUp {
@@ -169,21 +171,15 @@
       100% { transform: scale(1); opacity: 1; }
     }
 
-    .animated {
-      animation: fadeInUp 0.8s ease-out;
+    /* 中央揃え用 */
+    .center-heading {
+      text-align: center;
+      line-height: 1.2;
+      margin-bottom: 8px;
     }
 
-    @media (max-width: 480px) {
-      .hero-text {
-        margin-left: 0;
-        padding-left: 8px;
-      }
-      .hero-text h2 {
-        font-size: 0.95rem;
-      }
-      .hero-text p {
-        font-size: 0.75rem;
-      }
+    .center-heading span {
+      display: block;
     }
   </style>
 </head>
@@ -206,34 +202,35 @@
   </div>
 </div>
 
+<section class="animated">
+  <h3><img src="img/icon1.png" class="icon-circle">🌟 おすすめポイント</h3>
+  <div class="feature-box">📱 スマホで見やすいサイトを作りたい方</div>
+  <div class="feature-box">💬 SNSに貼れるURLが欲しい方</div>
+  <div class="feature-box">💰 コストを抑えて始めたい方</div>
+  <div class="feature-box">🧾 毎月かかるような費用（サーバー・ドメイン）もこのサービスでは不要！</div>
+</section>
+
+<section id="plans" class="animated">
+  <h3><img src="img/icon2.png" class="icon-circle">💰 プランと料金</h3>
+  <div class="plan-card">📄 1ページ制作：5,000円</div>
+  <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
+  <div class="plan-card">📲 LINE相談 無制限無料</div>
+</section>
+
 <section id="options" class="animated">
-  <h3 style="text-align:center; margin-bottom: 16px; line-height: 1.2;">
-    <img src="img/icon3.png" class="icon-circle"><br>
-    オプション料金<br>
-    <span style="font-size: 0.95rem; display: block; margin-top: 2px;">（必要な方のみ）</span>
-  </h3>
+  <h3 class="center-heading"><img src="img/icon3.png" class="icon-circle"><span>🛠 オプション料金</span><span>（必要な方のみ）</span></h3>
   <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
   <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
   <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
   <div class="option-card">🗺️ <a href="map.html" target="_blank">Googleマップ埋め込み</a>：+1,000円</div>
 </section>
 
-<section id="plans" class="animated">
-  <h3>💰 プランと料金</h3>
-  <div class="plan-card">📄 1ページ制作：5,000円</div>
-  <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
-  <div class="plan-card">📲 LINE相談 無制限無料</div>
-</section>
-
 <section class="animated">
-  <h3>🙋 よくある質問</h3>
+  <h3><img src="img/icon4.png" class="icon-circle">🙋 よくある質問</h3>
   <div class="faq">
-    <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>
-    → いいえ、<strong>サーバー契約不要の公開方式</strong>なので維持費ゼロです！</p>
-    <p><strong>Q.</strong> ドメインは必要？<br>
-    → 無料URLで十分ですが、独自ドメイン取得も相談OK！</p>
-    <p><strong>Q.</strong> 相談はどこから？<br>
-    → このLINEから気軽にどうぞ！</p>
+    <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>→ いいえ、<strong>サーバー契約不要の公開方式</strong>なので維持費ゼロです！</p>
+    <p><strong>Q.</strong> ドメインは必要？<br>→ 無料URLで十分ですが、独自ドメイン取得も相談OK！</p>
+    <p><strong>Q.</strong> 相談はどこから？<br>→ このLINEから気軽にどうぞ！</p>
   </div>
 </section>
 
