--- a/sp.html
+++ b/sp.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>まかせてWebライト</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'M PLUS Rounded 1c', sans-serif;
@@ -22,9 +22,8 @@
     }
 
     header h1 {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       margin: 0;
-      animation: bounceIn 1s ease forwards;
     }
 
     .logo-main {
@@ -36,6 +35,17 @@
       font-style: italic;
       color: #0d3050;
       margin-left: 4px;
+    }
+
+    .logo-animated {
+      animation: bounceIn 1s ease forwards;
+      animation-delay: 0.2s;
+    }
+
+    @keyframes bounceIn {
+      0%   { transform: scale(0.8); opacity: 0; }
+      60%  { transform: scale(1.05); opacity: 1; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
     .menu-icon {
@@ -95,6 +105,11 @@
       animation: fadeInUp 1s ease-out;
     }
 
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     section {
       padding: 32px 20px;
       border-bottom: 1px solid #eee;
@@ -104,7 +119,7 @@
       font-size: 1.2rem;
       border-left: 5px solid #64b5f6;
       padding-left: 12px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
     .feature-box, .plan-card, .option-card {
@@ -115,7 +130,9 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .feature-box:hover, .plan-card:hover, .option-card:hover {
+    .feature-box:hover,
+    .plan-card:hover,
+    .option-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
     }
@@ -148,45 +165,36 @@
     }
 
     .icon-circle {
-      width: 80px;
-      height: 80px;
+      width: 96px;
+      height: 96px;
       border-radius: 50%;
       object-fit: cover;
       vertical-align: middle;
-      margin-right: 16px;
+      margin-right: 12px;
     }
 
-    .animated {
-      animation: fadeInUp 0.8s ease-out;
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes bounceIn {
-      0% { transform: scale(0.8); opacity: 0; }
-      60% { transform: scale(1.05); opacity: 1; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
-    /* 中央揃え用 */
-    .center-heading {
-      text-align: center;
-      line-height: 1.2;
-      margin-bottom: 8px;
-    }
-
-    .center-heading span {
-      display: block;
+    @media (max-width: 480px) {
+      .hero-text {
+        margin-left: 0;
+        padding-left: 8px;
+      }
+      .hero-text h2 {
+        font-size: 0.95rem;
+      }
+      .hero-text p {
+        font-size: 0.75rem;
+      }
+      .icon-circle {
+        width: 64px;
+        height: 64px;
+      }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1><span class="logo-main">まかせて</span><span class="logo-sub">Webライト</span></h1>
+  <h1><span class="logo-animated"><span class="logo-main">まかせて</span><span class="logo-sub">Webライト</span></span></h1>
   <div class="menu-icon" onclick="toggleMenu()">☰</div>
   <nav id="menu">
     <a href="#plans">価格プラン</a>
@@ -196,41 +204,44 @@
 </header>
 
 <div class="hero">
-  <div class="hero-text animated">
+  <div class="hero-text">
     <h2>低価格でホームページを作成</h2>
     <p>サーバー契約不要ですぐ始められます！</p>
   </div>
 </div>
 
-<section class="animated">
-  <h3><img src="img/icon1.png" class="icon-circle">🌟 おすすめポイント</h3>
+<section id="options">
+  <h3><img src="img/icon1.png" class="icon-circle"> おすすめポイント</h3>
   <div class="feature-box">📱 スマホで見やすいサイトを作りたい方</div>
   <div class="feature-box">💬 SNSに貼れるURLが欲しい方</div>
   <div class="feature-box">💰 コストを抑えて始めたい方</div>
   <div class="feature-box">🧾 毎月かかるような費用（サーバー・ドメイン）もこのサービスでは不要！</div>
 </section>
 
-<section id="plans" class="animated">
-  <h3><img src="img/icon2.png" class="icon-circle">💰 プランと料金</h3>
+<section id="plans">
+  <h3><img src="img/icon2.png" class="icon-circle"> プランと料金</h3>
   <div class="plan-card">📄 1ページ制作：5,000円</div>
   <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
   <div class="plan-card">📲 LINE相談 無制限無料</div>
 </section>
 
-<section id="options" class="animated">
-  <h3 class="center-heading"><img src="img/icon3.png" class="icon-circle"><span>🛠 オプション料金</span><span>（必要な方のみ）</span></h3>
+<section>
+  <h3><img src="img/icon3.png" class="icon-circle"> オプション料金（必要な方のみ）</h3>
   <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
   <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
   <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
   <div class="option-card">🗺️ <a href="map.html" target="_blank">Googleマップ埋め込み</a>：+1,000円</div>
 </section>
 
-<section class="animated">
-  <h3><img src="img/icon4.png" class="icon-circle">🙋 よくある質問</h3>
+<section>
+  <h3><img src="img/icon4.png" class="icon-circle"> よくある質問</h3>
   <div class="faq">
-    <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>→ いいえ、<strong>サーバー契約不要の公開方式</strong>なので維持費ゼロです！</p>
-    <p><strong>Q.</strong> ドメインは必要？<br>→ 無料URLで十分ですが、独自ドメイン取得も相談OK！</p>
-    <p><strong>Q.</strong> 相談はどこから？<br>→ このLINEから気軽にどうぞ！</p>
+    <p><strong>Q.</strong> サーバーは契約しないとダメ？<br>
+    → いいえ、<strong>サーバー契約不要の公開方式</strong>なので維持費ゼロです！</p>
+    <p><strong>Q.</strong> ドメインは必要？<br>
+    → 無料URLで十分ですが、独自ドメイン取得も相談OK！</p>
+    <p><strong>Q.</strong> 相談はどこから？<br>
+    → このLINEから気軽にどうぞ！</p>
   </div>
 </section>
 
