--- a/sp.html
+++ b/sp.html
@@ -226,7 +226,7 @@
 </section>
 
 <section>
-  <h3><img src="img/icon3.png" class="icon-circle"> オプション料金（必要な方のみ）</h3>
+  <h3><img src="img/icon3.png" class="icon-circle"> オプション料金</h3>
   <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
   <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
   <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
