--- a/sp.html
+++ b/sp.html
@@ -220,17 +220,17 @@
 
 <section id="plans">
   <h3><img src="img/icon2.png" class="icon-circle">プランと料金</h3>
-  <div class="plan-card">📄 1ページ制作：5,000円</div>
+  <div class="plan-card">📄 1ページ制作：3,000円</div>
   <div class="plan-card">✏️ 修正1回無料、2回目以降 +1,000円</div>
   <div class="plan-card">📲 LINE相談 無制限無料</div>
 </section>
 
 <section>
   <h3><img src="img/icon3.png" class="icon-circle">オプション料金</h3>
-  <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,500円</div>
+  <div class="option-card">🏢 <a href="about.html" target="_blank">2ページ目の追加制作</a>：+1,000円</div>
   <div class="option-card">🎞️ <a href="slider.html" target="_blank">スライダー導入</a>：+2,000円</div>
-  <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム</a>：+2,000円</div>
-  <div class="option-card">🗺️ <a href="map.html" target="_blank">Googleマップ埋め込み</a>：+1,000円</div>
+  <div class="option-card">📨 <a href="form.html" target="_blank">問い合わせフォーム（LINE等）</a>：+2,000円</div>
+  <div class="option-card">🗺️ <a href="map.html" target="_blank">Googleマップ埋め込み</a>：+800円</div>
 </section>
 
 <section>
